Add getSchedule integration test